# rustWebs

./: .gitignore  README.md  test.rs  test2.rs
learningRust/: Cargo.toml  hello  playwithstructs  playwithstructs.rs
learningRust/src/: main.rs  playwithstructs.rs  rectangles.rs
rustWeb/: Cargo.toml
rustWeb/src/: main.rs  test_fusion.rs  tikz_export.rs
rust_web/: Cargo.toml  graph.dot  graph.tex  graph2.dot  hints.md  steane_style_steane_2_rounds.dot  steane_style_steane_2_rounds_rg.dot  thingsToDo.md
rust_web/benches/: matrix_benchmark.rs
rust_web/examples/: benchmark.rs  use_detection_webs.rs  use_f2linalg.rs  use_make_rg.rs
rust_web/python/: detection_webs.py  f2linalg.py  graph_loader.py  pauliweb.py  use_detection.ipynb
rust_web/src/: bitwisef2linalg.rs  create_graph.rs  detection_webs.rs  f2linalg.rs  fuckai.rs  fuckaiPauliweb.rs  graph_loader.rs  graph_visualizer.rs  lib.rs  main.rs  make_rg.rs  pauliweb.rs  tikz_export.rs
rust_web/src/zxgs/: 2_rounds_steane.zxg  borghans_state.zxg  borghanstate.zxg  repEncoding.zxg  simple_meas_no_ancilla.zxg  simple_stab.zxg  steane_style_steane_x_stabs.zxg  xxx_final copy.zxg  zz_rg.zxg  zz_stab_graphlike.zxg
rust_web/test_output/: test_graph_pw.dot  test_graph_simple.dot
rust_web/tests/: detection_webs_integration_test.rs  detection_webs_test.rs  f2linalg_tests.rs  load_and_draw_test.rs  load_and_pauliweb_test.rs  load_test.rs  loading.rs  pauliweb_tests.rs  tikz_export_and_fusion.rs
rust_web/tests/output/: detection_web_original.dot  loadgraph_with_pw_test.dot  pauli_web_graph_no_ids.dot  pauli_web_graph_with_ids.dot  simple_graph_no_ids.dot  simple_graph_with_ids.dot
rust_web/tests/zxgs/: 2_rounds_steane_rg.zxg  3_meas_make_cat.zxp  cnot.zxg  cnot_graphlike copy.json  cnot_graphlike.zxg  encoding_stabs_rep_star.zxg  hadamard_test.zxg  load_test.zxg  load_test_2.json  load_test_stab.zxg  pattern_io_hack.zxg  repWithStab.json  repWithStab.zxg  shorEncoding.zxg  shorStabMeasProof.zxp  shorWithStab.zxg  simple_meas.zxg  star_graph_2_rounds_rg.zxg  steane_style_steane_4_rounds.zxg  steane_style_steane_stabs.zxg  xx_stab.zxg  xx_stab_choi.zxg  xxx3 copy.zxg  xxx3.zxg  xxx_2_detection_graph.zxg  xxx_detection_graph.zxg  xxx_detection_graph_2.zxg  xxx_final.json  xxx_final.zxg  zz_graphlike.zxg  zz_hack_manual.zxg  zz_meas.zxg  zz_stab_choi.zxg
rust_web/tests/zxgs/detection_web_visualizations/steane_style_steane_2_rounds/: temp_graph.dot  temp_web_1.dot  temp_web_2.dot
rustzx/: Cargo.toml  graph.dot
rustzx/src/: lib  lib.rs  main.rs
rustzx/src/graph/: export.rs  fuse.rs  identity.rs  mod.rs  structure.rs  types.rs
