[package]
name = "rust_web"
version = "0.1.0"
edition = "2024"

[dependencies]
num = "0.4.3"
num-rational = "0.4.2"
num-traits = "0.2.19"
quizx = "0.1.0"
serde_json = "1.0.140"
tempfile = "3.3.0"
num-complex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ordered-float = "5.0.0"
petgraph = "0.6.0"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
nalgebra = { version = "0.32.3", features = ["std"] }

# Bit manipulation
bitvec = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
rustc-hash = "2.1.1"

