[package]
name = "rust_web"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3          # Maximize optimization
lto = true             # Enable Link Time Optimization
debug = false          # Explicitly disable debug info
strip = true           # Remove debug symbols
panic = 'abort'        # Optional: smaller binary by aborting on panic
codegen-units = 1      # Optimize aggressively

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[dependencies]
rayon = "1.8"
num = "0.4.3"
num-rational = "0.4.2"
num-traits = "0.2.19"
quizx = "0.1.0"
serde_json = "1.0.140"
tempfile = "3.3.0"
num-complex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
ordered-float = "5.0.0"
petgraph = "0.6.0"
ndarray = "0.15.6"
rand = "0.8.5"
bitvec = "1.0.1"
log = "0.4.20"
parking_lot = "0.12.1"  # For efficient synchronization
anyhow = "1.0"
env_logger = "0.11.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "matrix_benchmark"
harness = false
ndarray-linalg = { version = "0.16.0", features = ["openblas-system"] }
nalgebra = { version = "0.32.3", features = ["std"] }

# Logging
env_logger = "0.10"
log = "0.4"

# Bit manipulation
bitvec = "1.0"

anyhow = "1.0"
rustc-hash = "2.1.1"

